--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,20 +2,20 @@ project:
   type: website
 
 website:
-  title: "ajs-site"
+  title: "Amaan J. Sattar"
   navbar:
     right:
-      - about.qmd
+      - text: "CV"
+        href: cv.qmd
+      - text: "Blog"
+        href: blog.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/amaanjsattar
+
 format:
   html:
-    theme:
-      - cosmo
-      - brand
+    theme: cosmo
     css: styles.css
-
-editor: visual
-
+    include-in-header:
+      - text: |
+          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.0/css/all.css">
